--- a/portfolio.html
+++ b/portfolio.html
@@ -15,5 +15,7 @@
    </a> 
    <p>The Duel, By Steve Ng and John Walther (Story Project)</p>
    <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/121347406/?autostart=false" frameborder="0" allowfullscreen></iframe>
+   <p>1.1.4 Methods-Instruments</p>
+   <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/121046941/?autostart=false" frameborder="0" allowfullscreen></iframe>
  </body>
 </html>
