--- a/portfolio.html
+++ b/portfolio.html
@@ -8,16 +8,20 @@
    <a href="index.html">Home</a>
    <a href="portfolio.html">Portfolio</a>
    <h1>This is my Portfolio Page!</h1>
+   <p>Projects and links below!</p>
    <img src="images/images/portfolio.jpg" height="250">
    <br>
    <a target="_blank" href="https://scratch.mit.edu">
      <img src="images/images/scratchlogo.png" height="100">
    </a> 
    <p>The Duel, By Steve Ng and John Walther (Story Project)</p>
+   <p>https://scratch.mit.edu/projects/121347406/</p>
    <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/121347406/?autostart=false" frameborder="0" allowfullscreen></iframe>
    <p>1.1.4 Methods-Instruments</p>
+   <p>https://scratch.mit.edu/projects/121046941/</p>
    <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/121046941/?autostart=false" frameborder="0" allowfullscreen></iframe>
    <p>1.1.3 Branching and Iteration-Spinning Heads</p>
+   <p>https://scratch.mit.edu/projects/120973764/</p>
    <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/120973764/?autostart=false" frameborder="0" allowfullscreen></iframe>
  </body>
 </html>
