--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,7 @@
    <p>Projects and links below!</p>
    <img src="images/images/portfolio.jpg" height="250">
    <br>
-   <a target="_blank" href="https://scratch.mit.edu">
-     <img src="images/images/scratchlogo.png" height="100">
+   <a href="2.1.4/ice.html">Ice Cream!</a>
    </a> 
    <p>The Duel, By Steve Ng and John Walther (Story Project)</p>
    <p>https://scratch.mit.edu/projects/121347406/</p>
@@ -25,6 +24,5 @@
    <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/120973764/?autostart=false" frameborder="0" allowfullscreen></iframe>
    <p>1.3 Python Practice Files</p>
    <p>https://drive.google.com/file/d/0B4L4sYukTVAATGh6d1JEd01nV00/view?usp=sharing</p>
-   
  </body>
 </html>
